# sphinx-toolbox

./: .bumpversion.cfg  .gitignore  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  autonamedtuple_demo.py  autoprotocol_demo.py  autotypeddict_demo.py  demo.py  formate.toml  justfile  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: travis_deploy_conda.sh
.dependabot/: config.yml
.github/: actions_build_conda.sh  actions_deploy_conda.sh  auto_assign.yml  dependabot.yml  milestones.py  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cleanup.yml  conda_ci.yml  docs_test_action.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: .changelog.rst.swp  404.rst  Source.rst  _internal_extension.py  autodoc_augment_defaults.py  changelog.rst  conf.py  contributing.rst  docutils.conf  ignore_missing_xref.py  index.rst  latex_unicode.py  license.rst  phantom_section.py  requirements.txt  rtd-extra-deps.txt  sphinx_event_role.py  usage.rst
doc-source/_static/: style.css
doc-source/_templates/: layout.html
doc-source/api/: assets.rst  autodoc_augment_defaults.rst  autodoc_helpers.rst  autodoc_typehints.rst  autoprotocol.rst  autotypeddict.rst  code.rst  config.rst  confval.rst  formatting.rst  installation.rst  issues.rst  patched_autosummary.rst  rest_example.rst  shields.rst  source.rst  sphinx-toolbox.rst  testing.rst  utils.rst
doc-source/api/more_autodoc/: augment_defaults.rst  autoprotocol.rst  autotypeddict.rst  genericalias.rst  index.rst  typehints.rst  utils.rst  variables.rst
doc-source/api/tweaks/: index.rst
doc-source/extensions/: assets.rst  changeset.rst  code.rst  collapse.rst  confval.rst  decorators.rst  documentation_summary.rst  flake8.rst  formatting.rst  github.rst  index.rst  installation.rst  issues.rst  latex.rst  pre_commit.rst  rest_example.rst  shields.rst  sidebar_links.rst  source.rst  wikipedia.rst
doc-source/extensions/more_autodoc/: augment_defaults.rst  autonamedtuple.rst  autoprotocol.rst  autotypeddict.rst  generic_bases.rst  genericalias.rst  index.rst  no_docstring.rst  overloads.rst  regex.rst  sourcelink.rst  typehints.rst  typevars.rst  variables.rst
doc-source/extensions/more_autosummary/: column_widths.rst  index.rst
doc-source/extensions/tweaks/: footnote_symbols.rst  index.rst  latex_layout.rst  latex_toc.rst  param_dash.rst  revert_footnote_style.rst  sphinx_panels_tabs.rst  tabsize.rst
doc-source/usage/: autonamedtuple.rst  autoprotocol.rst  autotypeddict.rst  caching.rst  configuration.rst  confval.rst  directives-shields.rst  directives.rst  installation.rst  roles.rst
sphinx_toolbox/: __init__.py  __main__.py  _css.py  _data_documenter.py  assets.py  autodoc_augment_defaults.py  autodoc_helpers.py  autodoc_typehints.py  autoprotocol.py  autotypeddict.py  cache.py  changeset.py  code.py  collapse.py  config.py  confval.py  decorators.py  documentation_summary.py  flake8.py  formatting.py  github.py  installation.py  issues.py  latex.py  patched_autosummary.py  pre_commit.py  rest_example.py  shields.py  sidebar_links.py  source.py  testing.py  utils.py  wikipedia.py
sphinx_toolbox/github/: __init__.py  issues.py  repos_and_users.py
sphinx_toolbox/latex/: __init__.py  layout.py  succinct_seealso.py  toc.py
sphinx_toolbox/more_autodoc/: __init__.py  augment_defaults.py  autonamedtuple.py  autoprotocol.py  autotypeddict.py  generic_bases.py  genericalias.py  no_docstring.py  overloads.py  regex.css  regex.py  sourcelink.py  typehints.py  typevars.py  utils.py  variables.py
sphinx_toolbox/more_autosummary/: __init__.py  column_widths.py
sphinx_toolbox/tweaks/: __init__.py  footnote_symbols.py  latex_layout.py  latex_toc.py  param_dash.py  revert_footnote_style.py  sphinx_panels_tabs.py  tabsize.py
static_original/: tabs-no-collapse.js
tests/: _autonamedtuple_demo_pep563.py  autonamedtuple_demo_pep563.py  common.py  conftest.py  demo.py  genericalias_demo.py  overloads_demo.py  regex_demo.py  requirements.txt  test_assets.py  test_autodoc_typehints.py  test_autodoc_variables.py  test_autosummary_widths.py  test_code.py  test_config.py  test_css.py  test_deprecations.py  test_github.py  test_installation.py  test_issues.py  test_latex.py  test_main.py  test_more_autodoc.py  test_more_autosummary.py  test_purger.py  test_regex.py  test_rest_example.py  test_setup.py  test_shields.py  test_sidebar_links.py  test_source.py  test_sphinx_version.py  test_tabsize.py  test_testing.py  test_utils.py  test_wikipedia.py  typevars_demo.py  variables_genericalias_demo.py
tests/augment_defaults_demo/: __init__.py
tests/test-root-aw/: conf.py  index.rst
tests/test_autosummary_widths_/: test_latex_output.tex
tests/test_install_output_sphinx_inline_tabs/: conftest.py  test_inline_tabs_output.py
tests/test_issues_output/: conftest.py  test_source_output.py
tests/test_issues_output/test_source_output/: test_output_github_index_html_.html
tests/test_more_autodoc/: test_augment_defaults.py  test_autodoc_typehints.py  test_autonamedtuple.py  test_autoprotocol.py  test_autotypeddict.py  test_generic_bases.py  test_genericalias.py  test_no_docstring.py  test_overloads.py  test_regex.py  test_source_link.py  test_sourcelink.py  test_typehints.py  test_typevars.py  test_variables.py
tests/test_output/: _autonamedtuple_demo_pep563.py  autonamedtuple_demo_pep563.py  conftest.py  instancevar.py  overloads_demo.py  test_output.py  typevars_demo.py  variables_genericalias_demo.py
tests/test_shields_/: test_copy_asset_files_toolbox-shields.css
tests/test_source_output_github/: conftest.py  test_source_output.py
tests/test_source_output_sphinx/: conftest.py  test_source_output.py
tests/test_tweaks/: test_footnote_symbols.py  test_latex_toc.py  test_param_dash.py  test_sphinx_panels_tabs.py  test_tabsize.py
(+149 files in other folders)
