[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-toolbox"
version = "2.0.4.post1"
description = "Box of handy tools for Sphinx 🧰 📔"
readme = "README.rst"
keywords = [ "sphinx", "documentation", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-toolbox"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-toolbox/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-toolbox"
Documentation = "https://sphinx-toolbox.readthedocs.io/en/latest"

[project.optional-dependencies]
testing = [
    "domdf-python-tools[testing]>=1.5.0",
    "pygments>=2.7.4",
    "pytest>=6.0.0",
    "pytest-regressions>=2.0.4",
]
all = [
    "domdf-python-tools[testing]>=1.5.0",
    "pygments>=2.7.4",
    "pytest>=6.0.0",
    "pytest-regressions>=2.0.4",
]

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_toolbox"
