[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-toolbox"
version = "2.4.0"
description = "Box of handy tools for Sphinx 🧰 📔"
readme = "README.rst"
keywords = [ "sphinx", "documentation", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-toolbox"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-toolbox/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-toolbox"
Documentation = "https://sphinx-toolbox.readthedocs.io/en/latest"

[project.optional-dependencies]
testing = [ "coincidence>=0.3.1", "pygments>=2.7.4", "pytest>=6.0.0", "pytest-regressions>=2.2.0",]
all = [ "coincidence>=0.3.1", "pygments>=2.7.4", "pytest>=6.0.0", "pytest-regressions>=2.2.0",]

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_toolbox"

[tool.dep_checker]
allowed_unused = [ "html5lib", "sphinx_prompt", "sphinx_tabs",]
namespace_packages = [ "ruamel.yaml",]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.dep_checker.name_mapping]
beautifulsoup4 = "bs4"
