[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-toolbox"
version = "2.13.0b3"
description = "Box of handy tools for Sphinx 🧰 📔"
readme = "README.rst"
keywords = [ "documentation", "sphinx", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-toolbox"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-toolbox/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-toolbox"
Documentation = "https://sphinx-toolbox.readthedocs.io/en/latest"

[project.optional-dependencies]
precommit = [ "ruamel-yaml>=0.16.12",]
flake8 = [ "tabulate>=0.8.7",]
testing = [ "coincidence>=0.4.3", "pygments>=2.7.4",]
all = [ "coincidence>=0.4.3", "pygments>=2.7.4", "ruamel-yaml>=0.16.12", "tabulate>=0.8.7",]

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_toolbox"

[tool.dep_checker]
allowed_unused = [ "html5lib", "sphinx_prompt", "sphinx_tabs", "jinja2", "markupsafe",]
namespace_packages = [ "ruamel.yaml",]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.sphinx-pyproject]
github_username = "sphinx-toolbox"
github_repository = "sphinx-toolbox"
author = "Dominic Davis-Foster"
project = "sphinx-toolbox"
copyright = "2020-2021 Dominic Davis-Foster"
language = "en"
package_root = "sphinx_toolbox"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "seed_intersphinx_mapping",
    "sphinx_toolbox.pre_commit",
    "sphinx_toolbox.flake8",
    "sphinx_autofixture",
    "sphinx_event_role",
    "html_section",
    "_internal_extension",
    "sphinxcontrib.email",
    "ignore_missing_xref",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.dep_checker.name_mapping]
beautifulsoup4 = "bs4"
ruamel-yaml = "ruamel.yaml"
