# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
[metadata]
name = sphinx-toolbox
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/sphinx-toolbox
project_urls =
    Documentation = https://sphinx-toolbox.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/sphinx-toolbox/issues
    Source_Code = https://github.com/domdfcoding/sphinx-toolbox
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
